--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>WWe are learning Git and Github</h1>
+    <h1>We are learning Git and Github</h1>
+    <p>
+        This is paragraph after first commitgit
+    </p>
     
 </body>
 </html>
